fix layout issue of safari

--- a/medweb/src/web/style/main.css
+++ b/medweb/src/web/style/main.css
@@ -137,21 +137,6 @@ IMG {
   MARGIN-LEFT: 300px;
   TOP: 14.3em;
 }
-#search-des {
-  POSITION: relative;
-  PADDING-BOTTOM: 0px;
-  MARGIN: 0px 0px 0px -200px;
-  PADDING-LEFT: 0px;
-  WIDTH: 33em;
-  PADDING-RIGHT: 0px;
-  FONT: 12px 宋体, Arial, Helvetica, sans-serif;
-  COLOR: #999999;
-  TOP: 15em;
-  PADDING-TOP: 0px;
-  LEFT: 64px;
-  line-height:18px;
-  text-align:left;
-}
 #google {
   WIDTH: 52px;
   HEIGHT: 20px;
